# langgraph_ollama

./: .env  .env.backup  .env.demo  .env.example  .gitignore  2026-upgrade.md  CODING_ENGINEER.md  CODING_LOOP_ENGINEER.md  Fix_OTEL_Distributed_Trace_plan.md  IMPLEMENTATION_GUIDE.md  README.md  app.py  changelist.md  demo-changes-2026-07-18.md  demo-hardening-plan.md  demo.md  demo.ps1  docker-compose.observability.yml  loop-engineering-report.md  mm_agent.py  mm_st.py  pyproject.toml  rag_research_chatbot.py  requirements.txt  telemetry.py  web_research_prompts.py  web_researcher.py
.claude/: launch.json
demo-notes/: ai-platform-runbook.md  context-engineering.md  sql-execution-order.md
observability/: loki.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
observability/grafana/dashboards/: langgraph-ollama.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
tools/: __init__.py  mcp_notes.py  rag.py
