[project]
name = "langgraph-ollama"
version = "0.1.0"
description = "LangGraph + Ollama multi-agent / RAG experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangChain 0.3.x stack
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "langchain-ollama>=0.2",
    # LangGraph 0.3.x + sqlite checkpointer (now a separate package)
    "langgraph>=0.3,<0.4",
    "langgraph-checkpoint-sqlite>=2",
    # App / UI
    "streamlit",
    "pillow",
    "graphviz",
    # Data / documents
    "pandas",
    "openpyxl",
    "python-docx",
    "pymupdf",
    "beautifulsoup4",
    "faiss-cpu",
    # Web / scraping
    "selenium",
    "webdriver-manager",
    # Misc
    "python-dotenv",
    "pydantic>=2",
    "pypdf>=6.14.0",
    "tavily-python>=0.7.26",
]

[project.optional-dependencies]
# Observability stack — install with: uv sync --extra observability
# Kept optional so the core app has no hard dependency on OpenTelemetry.
observability = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "openinference-instrumentation-langchain>=0.1.29",
]
